// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table Equipment {
  id bigint [primary key, unique]
  
  //Basic Information
  Name varchar [not null]
  SerialNumber varchar [not null]
  ModelNumber varchar [not null]
  AssetTag varchar [not null]
  Category option_list [not null]
  ImgPath varchar [not null]
  Description varchar [not null]
  ManualLink varchar
  CheckInLocation varchar
  
  CalDueDate date
  WarranteeExpires date

  //Checkout Locations
  CheckedOutTo bigint [ref: > Employee.id]
  CheckOutDate date
  CheckOutLocation varchar

  AccessoryOf bigint [ref: > Equipment.id]
}

Table Employee{
  id bigint [primary key]
}